# EventExperienceManager

./: .dockerignore  .gitignore  README.md
Testing/: integration_testing.md  uat_testing.md
backend-mcp/: Dockerfile  README.md  config.py  kb_check_final.txt  kb_dump.txt  main.py  pyproject.toml  requirements.txt
backend-mcp/agents/: attendee_node.py  graph.py  manager_node.py  state.py
backend-mcp/api/: routes_chat.py  routes_simulate.py  routes_venue.py
backend-mcp/mcp_server/: server.py  tools_knowledge.py  tools_pubsub.py  tools_venue.py
backend-mcp/services/: firestore_client.py  pubsub_client.py  vertex_ai_client.py
backend-mcp/worker/: telemetry_subscriber.py
frontend-ux/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt
frontend-ux/.streamlit/: config.toml
frontend-ux/components/: chat_panel.py  heatmap.py  login_page.py  sandbox_controls.py  stage_indicator.py  venue_cards.py
frontend-ux/pages/: 1_🎫_Attendee_Dashboard.py  2_💬_AI_Concierge.py  3_📊_Manager_Dashboard.py  4_🧠_AI_Orchestration.py
frontend-ux/services/: api_client.py  firestore_listener.py
infra-data/: Dockerfile  README.md  config.py  ingest_documents.py  requirements.txt  scenario_engine.py  seed_venue_state.py
